--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "thingengineer/mysqli-database-class": "dev-master",
         "firebase/php-jwt": "^6.10",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "aws/aws-sdk-php": "^3.322"
     }
 }
